Updated translations and packages
Updated translations and packages

--- a/AppControl Manager/Pages/CreateDenyPolicy.xaml
+++ b/AppControl Manager/Pages/CreateDenyPolicy.xaml
@@ -11,6 +11,7 @@
     xmlns:vm="using:AppControlManager.ViewModels"
     xmlns:controls="using:CommunityToolkit.WinUI.Controls"
     xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:animatedvisuals="using:AnimatedVisuals"
     FlowDirection="{x:Bind ViewModel.AppSettings.ApplicationGlobalFlowDirection, Mode=OneWay}">
 
     <ScrollView>
@@ -413,14 +414,22 @@
                             <controls:WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalSpacing="15">
 
                                 <customUI:ButtonV2 x:Uid="SelectPolicyFileToAddRulesToButton"
+                                                   x:Name="SelectPolicyFileToAddRulesToButton"
                                                    Margin="15,0,0,0"
-                                                   ObservedData="{x:Bind ViewModel.PolicyFileToMergeWith, Mode=OneWay}"
+                                                   ObservedData="{x:Bind ViewModel.PolicyFileToMergeWith.PolicyIdentifier, Mode=OneWay, FallbackValue=''}"
                                                    Click="{x:Bind ViewModel.PolicyFileToMergeWithButton_Click}"
                                                    IsEnabled="{x:Bind ViewModel.PolicyFileToMergeWithPickerButtonIsEnabled, Mode=OneWay}">
 
                                     <customUI:ButtonV2.ContentTemplate>
                                         <DataTemplate x:DataType="x:String">
                                             <StackPanel Orientation="Horizontal" Spacing="8">
+
+                                                <AnimatedIcon Visibility="{x:Bind vm:ViewModelProvider.CreateDenyPolicyVM.PolicyFileToMergeWithLightAnimatedIconVisibility, Mode=OneWay}" Height="20" Margin="0,0,5,0" Width="20">
+                                                    <AnimatedIcon.Source>
+                                                        <animatedvisuals:Light/>
+                                                    </AnimatedIcon.Source>
+                                                </AnimatedIcon>
+
                                                 <FontIcon Glyph="&#xE8DA;" FontSize="16"/>
                                                 <TextBlock Text="{x:Bind}"/>
                                             </StackPanel>
@@ -428,7 +437,7 @@
                                     </customUI:ButtonV2.ContentTemplate>
 
                                     <customUI:ButtonV2.Flyout>
-                                        <Flyout>
+                                        <Flyout x:Name="SelectPolicyFileToAddRulesToButton_FlyOut">
 
                                             <controls:WrapPanel Orientation="Vertical" HorizontalSpacing="15" VerticalSpacing="15">
 
@@ -445,7 +454,7 @@
 
                                                 <TextBlock x:Uid="ViewSelectedFilesTextBlock" TextWrapping="WrapWholeWords" />
 
-                                                <TextBox Text="{x:Bind ViewModel.PolicyFileToMergeWith, Mode=OneWay}"
+                                                <TextBox Text="{x:Bind ViewModel.PolicyFileToMergeWith.PolicyIdentifier, Mode=OneWay, FallbackValue=''}"
                                                          TextWrapping="Wrap" AcceptsReturn="True" IsSpellCheckEnabled="False"
                                                          MinWidth="400" IsReadOnly="True" />
 
