--- a/Harden System Security/MainWindow.xaml
+++ b/Harden System Security/MainWindow.xaml
@@ -96,6 +96,7 @@
 
             <!-- Back button style, mimics the same NavigationView back button's style. If the style isn't set here, we can use the built-in animated icon for the back button -->
             <Button x:Name="BackButtonTitleBar"
+                    x:Uid="BackButtonTitleBar"
                     Style="{StaticResource NavigationBackButtonNormalStyle}"
                     Grid.Column="1"
                     Click="{x:Bind Nav.BackButtonTitleBar_Click}" />
@@ -104,6 +105,7 @@
             <Button VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
                     x:Name="HamburgerMenuButton"
+                    x:Uid="HamburgerMenuButton"
                     Grid.Column="2"
                     Style="{StaticResource PaneToggleButtonStyle}"
                     Margin="10,0,0,0"
@@ -172,6 +174,7 @@
 
             <!-- Sidebar access point -->
             <Button x:Name="SidebarButton"
+                    x:Uid="SidebarButton"
                     Click="{x:Bind ViewModel.SidebarButton_Click}"
                     Grid.Column="8"
                     Height="32"
